Fix alignment of form fields in profile.

--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -147,7 +147,7 @@ input[type="file"] {
     position: relative;
 }
 .profile-upload-btn {
-    padding: 12px 18px;
+    padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
     background-color: #919191;
